Add fail-on-service-update parameter
LMCROSSITXSADEPLOY-3200